--- a/blog-ui/package.json
+++ b/blog-ui/package.json
@@ -1,7 +1,15 @@
 {
   "name": "blog",
   "scripts": {
-    "dev": "nuxt"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3001"
+    }
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
