--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ target/
 ######################################################################
 # IDE
 /logs
+/**/.nuxt
 ### STS ###
 .apt_generated
 .classpath
