--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 /**/node_modules
+/**/package-lock.json
 ######################################################################
 # IDE
 /logs
